<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FamilyParking</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_group">Group</string>
    <string name="parking">P</string>
    <string name="add">+</string>
    <string name="find_contact">Write name or email</string>
    <string name="add_contact">Add contact to group</string>
    <string name="add_bluetooth">Add bluetooth device</string>
    <string name="remove_bluetooth">Remove bluetooth device</string>
    <string name="add_car">Create new car ...</string>
    <string name="park_car">Parking car ...</string>
    <string name="unpark_car">Occupying car ...</string>
    <string name="no_connection">No connection available!</string>
    <string name="back">BACK</string>
    <string name="code">Insert the code received by email</string>
    <string name="delete">DELETE</string>
    <string name="modify">MODIFY</string>
    <string name="ok">OK</string>
    <string name="infoBeforeClose">Family Parking can not access your location. The application will be closed!</string>
    <string name="action_groups">Groups</string>
    <string name="action_cars">Cars</string>
    <string name="action_ghostmode">Ghostmode</string>
    <string name="new_group">New Group</string>
    <string name="new_car">New Car</string>
    <string name="name_surname">Name and Surname</string>
    <string name="email">Email</string>
    <string name="name_group">Insert group\'s name</string>
    <string name="group_empty">No group is available!</string>
    <string name="car_empty">No car is available!</string>
    <string name="save">SAVE</string>
    <string name="discard">DISCARD</string>
    <string name="info_ghostmode">If you enable ghostmode the automatic behaviour of the app will be disable</string>
    <string name="create_car">Create car</string>
    <string name="list_car">Cars</string>
    <string name="edit_car">Edit car</string>
    <string name="car_name">Insert name</string>
    <string name="car_register">Insert register</string>
    <string name="car_details">DETAILS</string>
    <string name="car_contacts">CONTACTS</string>
    <string name="car_finder">Add: </string>
    <string name="car_finder_rules">Using name or email</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="tab_car">CARS</string>
    <string name="tab_create">CREATE</string>
    <string name="no_car">Your car list is empty"</string>
    <string name="update_car_list">Downloading cars information ..."</string>
    <string name="unpark">"UNPARK THE CAR"</string>

    <string-array name="car_brands">
        <item><string name="no_brand">add_car</string></item>
        <item><string name="alfa_romeo">alfa_romeo</string></item>
        <item><string name="audi">audi</string></item>
        <item><string name="bmw">bmw</string></item>
        <item><string name="chevrolet">chevrolet</string></item>
        <item><string name="citroen">citroen</string></item>
        <item><string name="dacia">dacia</string></item>
        <item><string name="ferrari">ferrari</string></item>
        <item><string name="fiat">fiat</string></item>
        <item><string name="ford">ford</string></item>
        <item><string name="honda">honda</string></item>
        <item><string name="hunday">hunday</string></item>
        <item><string name="jaguar">jaguar</string></item>
        <item><string name="jeep">jeep</string></item>
        <item><string name="kia">kia</string></item>
        <item><string name="lancia">lancia</string></item>
        <item><string name="land_rover">land_rover</string></item>
        <item><string name="lexus">lexus</string></item>
        <item><string name="mazda">mazda</string></item>
        <item><string name="mercedes">mercedes</string></item>
        <item><string name="mg">mg</string></item>
        <item><string name="mini">mini</string></item>
        <item><string name="mitsubishi">mitsubishi</string></item>
        <item><string name="nissan">nissan</string></item>
        <item><string name="opel">opel</string></item>
        <item><string name="peugeot">peugeot</string></item>
        <item><string name="porsche">porsche</string></item>
        <item><string name="renault">renault</string></item>
        <item><string name="seat">seat</string></item>
        <item><string name="skoda">skoda</string></item>
        <item><string name="smart">smart</string></item>
        <item><string name="subaru">subaru</string></item>
        <item><string name="toyota">toyota</string></item>
        <item><string name="volkswagen">volkswagen</string></item>
        <item><string name="volvo">volvo</string></item>
    </string-array>

</resources>
