<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity$EditCar">

        <RelativeLayout
            android:id="@+id/car_details_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/car_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:background="@color/transparent"
                android:text="@string/car_details"
                android:textSize="15dp"
                android:textColor="@color/gray"/>

            <View
                android:id="@+id/car_details_v"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/car_details_tv"
                android:background="@color/soft_gray_transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_spinner_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_details_relative"
            android:layout_alignParentLeft="true">
            <Spinner
                android:id="@+id/brand_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/brand_s"
                android:background="@color/soft_gray_transparent"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_name_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_spinner_relative">
            <ImageView
                android:id="@+id/car_name_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:background="@drawable/car"
                android:backgroundTint="@color/light_gray"/>

            <EditText
                android:id="@+id/car_name_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:ellipsize="start"
                android:gravity="left|center_vertical"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:background="@color/transparent"
                android:hint="@string/car_name"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:layout_toRightOf="@id/car_name_iv"
                android:layout_marginLeft="22dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/car_name_et"
                android:background="@color/soft_gray_transparent"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_register_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_name_relative">
            <ImageView
                android:id="@+id/car_register_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:background="@drawable/register"
                android:backgroundTint="@color/light_gray"/>

            <EditText
                android:id="@+id/car_register_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:ellipsize="start"
                android:gravity="left|center_vertical"
                android:inputType="textAutoComplete|textCapCharacters"
                android:singleLine="true"
                android:background="@color/transparent"
                android:hint="@string/car_register"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16dp"
                android:layout_toRightOf="@id/car_register_iv"
                android:layout_marginLeft="22dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/car_register_et"
                android:background="@color/soft_gray_transparent"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:visibility="invisible"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:id="@+id/car_users_v"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/car_register_relative"
            android:background="@color/soft_gray_transparent"/>

        <RelativeLayout
            android:id="@+id/car_contacts_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_users_v">

            <TextView
                android:id="@+id/car_contacts_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:background="@color/transparent"
                android:text="@string/car_contacts"
                android:textSize="15dp"
                android:textColor="@color/gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/car_contacts_tv"
                android:background="@color/soft_gray_transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_contacts_list_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_contacts_relative">

            <org.lucasr.twowayview.TwoWayView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/group_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_centerVertical="true"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                style="@style/TwoWayView"
                android:drawSelectorOnTop="false"
                tools:context=".ManageGroupDialog"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/group_list"
                android:background="@color/soft_gray_transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_finder_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_contacts_list_relative">
            <TextView
                android:id="@+id/car_finder_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:background="@color/transparent"
                android:text="@string/car_finder"
                android:textSize="16dp"
                android:textColor="@color/gray"/>

            <EditText
                android:id="@+id/car_finder_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:ellipsize="start"
                android:gravity="left|center_vertical"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:background="@color/transparent"
                android:hint="@string/car_finder_rules"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16dp"
                android:layout_toRightOf="@id/car_finder_tv"
                android:layout_marginLeft="20dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@id/car_finder_et"
                android:background="@color/soft_gray_transparent"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_finder_result_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_finder_relative"
            android:visibility="gone">

            <ListView
                android:id="@+id/car_finder_lv"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:divider="@null"/>

        </RelativeLayout>

        <View
            android:id="@+id/car_bluetooth_v"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/car_finder_result_relative"
            android:background="@color/soft_gray_transparent"/>

        <RelativeLayout
            android:id="@+id/car_bluetooth_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_bluetooth_v">

            <TextView
                android:id="@+id/car_bluetooth_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:singleLine="true"
                android:background="@color/transparent"
                android:text="@string/bluetooth"
                android:textSize="15dp"
                android:textColor="@color/gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/car_bluetooth_tv"
                android:background="@color/soft_gray_transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_bluetooth_button_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_bluetooth_relative">

            <Button
                android:id="@+id/car_bluetooth_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/add_bluetooth"
                android:textColor="@color/white"
                android:background="@drawable/rectangle_blue"/>
        </RelativeLayout>

        <View
            android:id="@+id/car_save_v"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/car_bluetooth_button_relative"
            android:background="@color/soft_gray_transparent"/>

        <RelativeLayout
            android:id="@+id/car_save_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_save_v">

            <Button
                android:id="@+id/car_save_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:background="@drawable/rectangle_green"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/car_delete_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/car_save_relative"
            android:visibility="gone">

            <Button
                android:id="@+id/car_delete_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:background="@drawable/rectangle_red"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>


