<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_item_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="5dp"
    android:padding="15dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/abc_popup_background_mtrl_mult">

    <RelativeLayout
        android:id="@+id/relative_name_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:clickable="true">
        <TextView
            android:id="@+id/group_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@drawable/add_group"/>

        <TextView
            android:id="@+id/group_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/group_iv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@color/transparent"
            android:singleLine="true"
            android:textStyle="bold"
            android:hint="@string/name_group"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_car_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/relative_name_group"
        android:clickable="true">
        <ImageView
            android:id="@+id/car_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/add_car"/>

        <TextView
            android:id="@+id/car_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/car_iv"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@color/transparent"
            android:singleLine="true"
            android:hint="@string/car_model"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relative_car_group"
        android:clickable="true">

        <org.lucasr.twowayview.TwoWayView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/group_list"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            style="@style/TwoWayView"
            android:drawSelectorOnTop="false"/>
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/gray"
        android:layout_below="@id/group_rl"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/button_rl_group"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/line"
        android:visibility="gone">


        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@android:drawable/ic_menu_revert"
                android:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/back_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_back"
                android:layout_centerVertical="true"
                android:text="@string/back"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@color/transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/modify_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true">

            <ImageView
                android:id="@+id/image_modify"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@android:drawable/ic_menu_edit"
                android:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/modify_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_modify"
                android:text="@string/modify"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@color/transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@android:drawable/ic_menu_delete"
                android:backgroundTint="@color/gray"/>

            <TextView
                android:id="@+id/delete_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/image_delete"
                android:text="@string/delete"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:background="@color/transparent"/>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>


